PUt implemented for updating extracting details, fixed openapi schema
