# src/main/kotlin/com/shykial/kScrapperCore/controller/ExtractingDetailsController.kt
@@ -1,7 +1,7 @@
 package com.shykial.kScrapperCore.controller
 
-import com.shykial.kScrapperCore.extensions.runSuspend
-import com.shykial.kScrapperCore.helpers.toResponseEntity
+import com.shykial.kScrapperCore.extension.runSuspend
+import com.shykial.kScrapperCore.helper.toResponseEntity
 import com.shykial.kScrapperCore.mapper.toExtractingDetailsResponse
 import com.shykial.kScrapperCore.mapper.toResponse
 import com.shykial.kScrapperCore.service.ExtractingDetailsService
@@ -10,6 +10,7 @@ import generated.com.shykial.kScrapperCore.models.AddExtractingDetailsResponse
 import generated.com.shykial.kScrapperCore.models.ExtractedFieldDetails
 import generated.com.shykial.kScrapperCore.models.ExtractingDetailsRequest
 import generated.com.shykial.kScrapperCore.models.ExtractingDetailsResponse
+import generated.com.shykial.kScrapperCore.models.ExtractingDetailsUpdateRequest
 import kotlinx.coroutines.flow.Flow
 import kotlinx.coroutines.flow.map
 import mu.KotlinLogging
@@ -24,15 +25,24 @@ class ExtractingDetailsController(
     private val log = KotlinLogging.logger { }
 
     override suspend fun findExtractingDetailsById(id: String): ResponseEntity<ExtractingDetailsResponse> {
-        log.info("Received find extracting details request for extractingDetailsId: $id")
+        log.info("Received find extracting details request for extractingDetails ID: $id")
         return extractingDetailsService.findByExtractingFieldDetailsId(id)
             .toExtractingDetailsResponse()
             .toResponseEntity()
     }
 
+    override suspend fun updateExtractingDetails(
+        id: String,
+        extractingDetailsUpdateRequest: ExtractingDetailsUpdateRequest,
+    ): ResponseEntity<Unit> {
+        log.info("Received update extracting details request for extractingDetails ID: $id")
+        extractingDetailsService.updateExtractingDetails(id, extractingDetailsUpdateRequest)
+        return ResponseEntity(HttpStatus.NO_CONTENT)
+    }
+
     override fun findExtractingDetails(
         domainId: String,
-        fieldNames: List<String>?
+        fieldNames: List<String>?,
     ): ResponseEntity<Flow<ExtractingDetailsResponse>> {
         log.info("Received find extracting details request for domainId: $domainId and fieldNames: $fieldNames")
         return extractingDetailsService.findByDomainIdAndFieldNames(domainId, fieldNames)
@@ -46,7 +56,7 @@ class ExtractingDetailsController(
         .also {
             log.info(
                 "Received request for adding extracting details for domainId: ${it.domainId}" +
-                    ", for fields: ${it.extractedFieldsDetails.map(ExtractedFieldDetails::fieldName)}"
+                        ", for fields: ${it.extractedFieldsDetails.map(ExtractedFieldDetails::fieldName)}"
             )
         }.runSuspend(extractingDetailsService::addExtractingDetails)
         .toResponse()
